k8s/apps/tools/paperless-redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: paperless-redis
  name: paperless-redis
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless-redis
  template:
    metadata:
      labels:
        app: paperless-redis
    spec:
      containers:
      - env: []
        image: docker.io/redis:latest
        name: paperless-redis
        ports:
        - containerPort: 6379
