k8s/apps/tools/it-tools-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: it-tools
  namespace: default
spec:
  ports:
  - name: port-80
    port: 80
    targetPort: 80
  selector:
    app: it-tools
