k8s/apps/tools/paperless-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-redis
  namespace: default
spec:
  ports:
  - name: port-6379
    port: 6379
    targetPort: 6379
  selector:
    app: paperless-redis
