k8s/apps/tools/paperless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless
  namespace: default
spec:
  ports:
  - name: port-8000
    port: 8000
    targetPort: 8000
  selector:
    app: paperless
