k8s/apps/tools/stirling-pdf-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stirling-pdf
  namespace: default
spec:
  ports:
  - name: port-8080
    port: 8080
    targetPort: 8080
  selector:
    app: stirling-pdf
