k8s/apps/tools/paperless-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless-ingress
  namespace: default
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`paperless.example.com`)
    services:
    - name: paperless
      port: 8000
  tls:
    certResolver: cloudflare
